...
        activeIcon: Icon(Icons.home),
        label: 'Accueil',
      ),
      const BottomNavigationBarItem(
        icon: Icon(Icons.apartment),
        activeIcon: Icon(Icons.apartment),
        label: 'Biens',
      ),
      const BottomNavigationBarItem(
        icon: Icon(Icons.location_on_outlined),
        activeIcon: Icon(Icons.location_on),
        label: 'Agences',
      ),
      BottomNavigationBarItem(
        icon: const Icon(Icons.person_outlined),
        activeIcon: const Icon(Icons.person),
        label: auth.isAuthenticated ? (auth.isClient ? 'Plus' : 'Profil') : 'Connexion',
      ),
...
    });
  }

  PreferredSizeWidget _buildAppBar(AuthProvider auth) {
    return AppBar(
      title: Text(
        'Horoazhon',
        style: AppTextStyles.textLg.w700.withColor(AppColors.blue500),
      ),
      centerTitle: false,
      actions: [
        if (auth.isAuthenticated)
          Padding(
...
